aboutt mobile nav alignment fixed

--- a/aboutt/css/base.css
+++ b/aboutt/css/base.css
@@ -291,7 +291,7 @@ main {
 
 .menu {
 	position: relative;
-	z-index: 1000;
+	z-index: 9999999999;
 	display: flex;
 	flex-direction: column;
 	margin: 0 0 0 25vw;
@@ -369,10 +369,15 @@ main {
 
 
 @media screen and (max-width: 55em) {
+	main {
+		padding-top: 9em;
+		z-index: 9;
+	}
 	.message {
 		display: block;
 	}
 	.content {
+		vertical-align: middle;
 		flex-direction: column;
 		height: auto;
 		min-height: 0;
@@ -380,7 +385,7 @@ main {
 	}
 	.content--fixed {
 		position: relative;
-		z-index: 10000;
+		z-index: 99;
 		display: block;
 		padding: 0.85em 0.5em 2em;
 	}
@@ -430,7 +435,7 @@ main {
 	justify-content: center;
 	flex-wrap: wrap;
 	position: relative;
-	
+
 }
 
 .last__item--showDeco::before {
