--- a/css/nav-a.css
+++ b/css/nav-a.css
@@ -22,12 +22,15 @@ header {
     position: absolute;
     top: 2em;
     width: 100%;
+    z-index: 10001;
 }
 
 .menu-mobile a {
+  clear: right;
     text-decoration: none;
     color: white;
     margin: 0 10px;
+    line-height: 70px;
     text-transform: uppercase;
     font-size: 13px;
     font-family: 'Raleway', sans-serif;
@@ -68,7 +71,6 @@ label {
         display: block;
         border-bottom: 1px solid #EAEAEB;
         margin: 0;
-        line-height: 50px;
 
     }
     #toggle:checked + .menu-mobile {
