--- a/css/nav-t.css
+++ b/css/nav-t.css
@@ -25,9 +25,11 @@ header {
 }
 
 .menu a {
+  clear: right;
     text-decoration: none;
     color: white;
     margin: 0 10px;
+    line-height: 70px;
     text-transform: uppercase;
     font-size: 13px;
     font-family: 'Raleway', sans-serif;
@@ -68,7 +70,6 @@ label {
         display: block;
         border-bottom: 1px solid #EAEAEB;
         margin: 0;
-        line-height: 50px;
 
     }
     #toggle:checked + .menu {
